helm_BK_FUNZIONANTE/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: http-echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  namespace: http-echo
  labels:
    app: http-echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: 691629053862.dkr.ecr.eu-west-1.amazonaws.com/http-echo:latest
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
